music: Fix bugs on Firefox and Chrome Mobile

--- a/_assets/css/_base.sass
+++ b/_assets/css/_base.sass
@@ -3,6 +3,7 @@ body
   background-attachment: fixed
   color: $text-color
   font-family: $sans-serif
+  min-height: 100vh
 
 a, a:visited
   color: $link-color
